# online-3d-bin-packing-stability-repacking

./: .dockerignore  .gitattributes  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.demo.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements_docker.txt  test.py  train.py
.devcontainer/: devcontainer.json
_plotly_live/notebook_demo/: mcts_replay.html  packing_steps.html
_three_live/cj_policy/: run_seed_108_mcts_false_optimize_false.html
configs/: test_cj_cascade.yaml  test_cj_default.yaml  test_default.yaml  test_demo.yaml  train_cj_default.yaml  train_default.yaml  train_demo.yaml
coppeliaSim_simulation/: coppeliaSimEnv.py  description.md  run_stability_sweep_strict_convex_compare_3parallel.sh  stability_experiment.py
docker/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  setup_nvidia_docker_and_compose.sh
docker/docs/: 2026-05-27-docker-entrypoint-cleanup-design.md  2026-05-27-docker-entrypoint-cleanup-plan.md  2026-05-27-docker-folder-reorg-plan.md
docs/: block_wise_filter_optimization.md  cascaded_block_selector_experiment.md  index.html  packing_process_method.md  remove_inscribed_ems_method.md
docs/replays/: mcts_optimized_replay.html
docs/superpowers/plans/: 2026-05-26-simpleblock-staging-preview.md  2026-05-27-cascaded-block-selector.md  2026-05-27-docker-entrypoint-cleanup.md  2026-05-29-layered-achievability-baseline.md  2026-05-29-layered-cascaded-policy.md  2026-05-29-stable-ems-pruning.md
docs/superpowers/specs/: 2026-05-26-simpleblock-staging-preview-design.md  2026-05-27-cascaded-block-selector-design.md  2026-05-27-docker-entrypoint-cleanup-design.md  2026-05-29-layered-achievability-baseline-design.md  2026-05-29-layered-cascaded-policy-design.md  2026-05-29-stable-ems-pruning-design.md
examples/figures/: README.md
examples/tutorials/: README.md  clearance_demo.ipynb  packing_demo.ipynb
integrations/coppeliaSim/: coppeliaSim_bin_packing.ttt  description.md  run_stability_sweep_strict_convex_compare_3parallel.sh  stability_experiment.py
interactive_simulator_app/: __init__.py  __main__.py  server.py  simulator.py
interactive_simulator_app/static/: index.html  simulator.js  style.css
model/: actor.py  cascaded_actor.py  cascaded_critic.py  cascaded_policy.py  critic.py  packing_transformer.py  space_embed.py
model/blocks/: ems_embed.py  ffn.py  item_embed.py  multiheaded_attention.py  norm_order.py  pack_transform_layer.py  pack_transform_layer_flash.py  projection.py
monitoring/: prometheus.yml
outputs/three_live/cj_policy/: index.html  run_seed_1023_mcts_false_optimize_false.html  run_seed_12340_mcts_false_optimize_false.html  run_seed_123_mcts_false_optimize_false.html  run_seed_2_mcts_false_optimize_false.html
outputs/three_live/demo/: run_seed_101_mcts_false_optimize_false.html
outputs/train_outputs/random/: data_distribution.json
packing/: __init__.py  a_star.py  agents.py  debug_utils.py  interactive_replay.py  live_plot.py  mcts.py  plans.py  policy_loader.py  test_utils.py  three_scene.py  train_utils.py  visualizer.py
packing_env/: __init__.py  gym_env.py  heu_ems.py  heu_stable.py
packing_env/data_type/: __init__.py  buffer.py  container.py  data_sampler.py  ems.py  geometry.py  item.py  maps.py  oriented_block.py  support_vis.py
packing_env/stable_heuristics_baselines/: __init__.py  adaptive_tree.py  combined_rules.py  convex_hull.py  utils.py
packing_env/visualization/: __init__.py  buffer_support.py  config.py  drawer.py  figure_entry.py  left_plot.py  right_bottom_plot.py  right_up_plot.py
tests/: test_cascaded_block_candidates.py  test_cascaded_policy.py  test_layered_achievability.py  test_simpleblock_buffer.py  test_three_scene.py
tutorials/: README.md  clearance_demo.ipynb  interactive_simulator_demo.ipynb  packing_demo.ipynb
