[project]
name = "packing-toolkit"
version = "0.1.0"
description = "A Reinforcement Learning toolkit for packing"
authors = [
    {name = "Ziyan Gao", email = "ziyan.gao@jaist.ac.jp"},
    {name = "Lijun Wang", email = "lijun.wang@jaist.ac.jp"},
]
dependencies = [
    "packaging",
    "torch==2.4.1",
    "torchvision",
    "timm",
    "gymnasium==1.0.0",
    "gym",
    "pettingzoo",
    "numba",
    "lightning>=2.4.0,<3.0.0",
    "torchmetrics>=1.4.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.4",
    "scikit-learn",
    "einops>=0.8.0",
    "rootutils>=1.0.7",
    "evaluate>=0.4.1",
    "rich",
    "omegaconf",
]

requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "GPL-V3"}

[tool.poetry]
name = "packing-toolkit"
version = "0.1.0"
description = "A Reinforcement Learning toolkit for packing"
authors = [
    "Ziyan Gao <ziyan.gao@jaist.ac.jp>",
    "Lijun Wang <lijun.wang@jaist.ac.jp>",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tianshou = {git = "https://github.com/thu-ml/tianshou.git", rev = "935a85a09fed1466379e26378c11821c6a7c9954"}

[build-system]
requires = ["pdm-backend", "setuptools", "wheel", "Cython", "numpy"]
build-backend = "pdm.backend"

[project.optional-dependencies]
integration = ["deepspeed", "rootutils", "autoroot", "sh"]
no_isolation = [
    "flash_attn==2.6.3",
    "xformers==0.0.28post1",
]
toolbox = [
    "pre-commit",
    "transformers",
    "tqdm",
    "polars>=1.0.0",
    "pandas",
    "shimmy",
    "h5py",
    "transforms3d",
]

logging = [
    "wandb",
    "clearml",
    "tensorboard",
]



[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

[[tool.pdm.sources]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"


[[tool.pdm.source]]
include_packages = ["torch", "torchvision"]
exclude_packages = ["*"]
name = "torch"
url = "https://download.pytorch.org/whl/cu121" # for torchvision compatibility
verify_ssl = true


[tool.pdm.dev-dependencies]
lint = [
    "ruff",
]
test = ["pytest"]
doc = [
    "pdoc",
]
type = [
    "mypy",
]
notebook = ["jupyter", "jupyterlab", "ipykernel"]
plot = [
    "matplotlib",
    "seaborn",
    "vtk",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.12"
show_column_numbers = true
show_error_context = true
warn_return_any = true

[tool.ruff]
exclude = [
  "*/.venv/*",
  "__pycache__",
  ".git",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width = 4
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "W191",  # indentation contains tabs
  "F401",  # imported but unused
  "F403",
  "C901",  # function is too complex
  "UP007", # use `isinstance()` instead of comparing types directly
  "C419",  # unnecessary list comprehensions passed to any and all
  "C416",  # unnecessary dict, list, and set comprehension.
  "SIM118", # Needed b/c iter(batch) != iter(batch.keys()). See https://github.com/thu-ml/tianshou/issues/922
  "E501", # line too long. black does a good enough job
  "E741", # variable names like "l". this isn't a huge problem
  "B008", # do not perform function calls in argument defaults. we do this sometimes
  "B011", # assert false. we don't use python -O
  "B028", # we don't need explicit stacklevel for warnings
  "D100", "D101", "D102", "D104", "D105", "D107", "D203", "D213", "D401", "D402", # docstring stuff
  "DTZ005", # we don't need that
  # remaining rules from https://github.com/psf/black/blob/main/.flake8 (except W503)
  # this is a simplified version of config, making vscode plugin happy
  "E402", "E501", "E701", "E731", "C408", "E203",
  # Logging statement uses f-string warning
  "G004",
  # Unnecessary `elif` after `return` statement
  "RET505",
  "D106", # undocumented public nested class
  "D205", # blank line after summary (prevents summary-only docstrings, which makes no sense)
  "D212", # no blank line after """. This clashes with sphinx for multiline descriptions of :param: that start directly after """
  "PLW2901", # overwrite vars in loop
  "B027", # empty and non-abstract method in abstract class
  "D404", # It's fine to start with "This" in docstrings
  "D407", "D408", "D409", # Ruff rules for underlines under 'Example:' and so clash with Sphinx 
]
unfixable = [
    "F841", # unused variable. ruff keeps the call, but mostly we want to get rid of it all
    "F601", # automatic fix might obscure issue
    "F602", # automatic fix might obscure issue
    "B018", # automatic fix might obscure issue
]
extend-fixable = [
    "B905", # bugbear
]

[tool.ruff.lint.mccabe]
# C901
max-complexity = 10
